data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_858.wast
;; 9. **Test Description**: Incorporate `nop` in nested block structures calling imported functions and validate the nested control flow is not altered by `nop`.    - **Constraint**: Verify that nested blocks execute correctly with `nop` in presence of imported function calls.    - **Relates to**: Ensures nested structure stability with external interactions involving `nop`.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32)))
    (func
      (block
        (nop)
        (call $external_func (i32.const 42))
        (block
          (nop)
          (call $external_func (i32.const 24))
        )
      )
    )
  )
  "type mismatch"
)